--- a/hub-frontend/public/Part1-source-node.html
+++ b/hub-frontend/public/Part1-source-node.html
@@ -718,6 +718,17 @@ const DIVE = {
   }
 };
 
+const IS_MOBILE = window.matchMedia && window.matchMedia("(max-width: 430px)").matches;
+const IS_COARSE_POINTER = window.matchMedia && window.matchMedia("(pointer: coarse)").matches;
+const MOBILE_DIVE = IS_MOBILE || IS_COARSE_POINTER || (window.matchMedia && window.matchMedia("(max-width: 820px)").matches);
+if (MOBILE_DIVE) {
+  // Mobile portals feel smoother with fewer warp particles and a shorter dive.
+  DIVE.durMs = 1200;
+  DIVE.zoomTo = 3.25;
+  DIVE.warp.count = 320;
+  DIVE.warp.radiusMul = 1.34;
+}
+
 // Current dive values (computed every frame)
 let diveU = 0;
 let diveEase = 0;
@@ -929,7 +940,12 @@ function drawWarp(cx, cy, coreR, dt){
         buildCoreParticles();
         buildGrainLayer();
       }
-      window.addEventListener("resize", resize, { passive:true });
+      const scheduleResize = () => requestAnimationFrame(resize);
+      window.addEventListener("resize", scheduleResize, { passive:true });
+      window.addEventListener("orientationchange", scheduleResize, { passive:true });
+      if (window.visualViewport) {
+        window.visualViewport.addEventListener("resize", scheduleResize, { passive:true });
+      }
 
       /* ============================================================
          Static layers
