--- a/hub-frontend/app/Part1-source-node.html
+++ b/hub-frontend/app/Part1-source-node.html
@@ -394,6 +394,7 @@
       .frame{
         width: 100vw;
         height: 100vh;
+        height: 100svh;
         height: 100dvh;
         border-radius: 18px;
       }
