--- a/hub-frontend/app/Part3-magnetic-router-forwarder.html
+++ b/hub-frontend/app/Part3-magnetic-router-forwarder.html
@@ -1056,6 +1056,7 @@ canvas {
       .frame{
         width: 100vw;
         height: 100vh;
+        height: 100svh;
         height: 100dvh;
         border-radius: 18px;
       }
