--- a/hub-frontend/public/Part3-magnetic-router-forwarder.html
+++ b/hub-frontend/public/Part3-magnetic-router-forwarder.html
@@ -1386,6 +1386,7 @@
       .frame {
         width: 100vw;
         height: 100vh;
+        height: 100svh;
         height: 100dvh;
         border-radius: 18px;
         display: flex;
