Added Privacy, Terms, Contact Pages and FAQ to homepage

--- a/hub-frontend/app/Part1-source-node.html
+++ b/hub-frontend/app/Part1-source-node.html
@@ -443,10 +443,10 @@
   <div class="stage">
     <div class="frame" id="frame">
       <div class="badgeStack">
-        <div class="brandMark"><span class="brandText">ALPHA ALERTS</span><span class="brandSep">•</span><span class="brandPhase">PHASE 1</span></div>
+        <div class="brandMark"><span class="brandText">ALPHA ALERTS</span><span class="brandSep">•</span><span class="brandPhase">STAGE 1</span></div>
         <div class="workflowNote">
           <div class="workflowTitle">SYSTEM WORKFLOW</div>
-          <p class="workflowText">PHASE 1 PULLS RAW SOURCES.</p>
+          <p class="workflowText">STAGE 1 PULLS RAW SOURCES.</p>
         </div>
       </div>
       <div class="sphereHint" id="sphereHint">TRIPPLE CLICK</div>
