--- a/hub-frontend/app/Part3-magnetic-router-forwarder.html
+++ b/hub-frontend/app/Part3-magnetic-router-forwarder.html
@@ -799,7 +799,7 @@ canvas {
 
   
     /* ==========================
-       Phase label (matches Part 1 / Part 2)
+      Stage label (matches Part 1 / Part 2)
        ========================== */
     .brandWrap{
       position:absolute;
@@ -1118,7 +1118,7 @@ canvas {
     .goAlphaWrap{
       position:absolute;
       right:18px;
-      bottom:26px;
+      bottom:92px;
       z-index: 40;
       pointer-events:auto;
     }
@@ -1241,16 +1241,16 @@ canvas {
   <div class="stage">
     <div class="frame" id="frame">
       <div class="badgeStack">
-        <div class="brandWrap"><div class="brandMark">ALPHA ALERTS</div><div class="brandSep">•</div><div class="phaseTag">PHASE 3</div></div>
+        <div class="brandWrap"><div class="brandMark">ALPHA ALERTS</div><div class="brandSep">•</div><div class="phaseTag">STAGE 3</div></div>
         <div class="workflowNote">
           <div class="workflowTitle">SYSTEM WORKFLOW</div>
-          <p class="workflowText">PHASE 3 ROUTES TO EARLY, TREND, RUNNER.</p>
+          <p class="workflowText">STAGE 3 ROUTES TO EARLY, TREND, RUNNER.</p>
         </div>
       </div>
       <canvas id="cv"></canvas>
 
       <!-- ==========================
-           Phase 3 CTA Portal Overlay
+          Stage 3 CTA Portal Overlay
            (Activates on click of GO ALPHA)
            ========================== -->
       <div class="portalLayer" id="portalLayer" aria-hidden="true">
@@ -2501,7 +2501,7 @@ canvas {
 
   <script>
     /* ============================================================
-       PHASE 3 CTA PORTAL (non-destructive upgrade)
+       STAGE 3 CTA PORTAL (non-destructive upgrade)
       - Click GO ALPHA
        - Cinematic zoom + warp streaks
        - Then navigate to pricing page
