--- a/hub-frontend/public/Part3-magnetic-router-forwarder.html
+++ b/hub-frontend/public/Part3-magnetic-router-forwarder.html
@@ -1106,7 +1106,7 @@
 
 
     /* ==========================
-       Phase label (matches Part 1 / Part 2)
+      Stage label (matches Part 1 / Part 2)
        ========================== */
     .brandWrap {
       position: absolute;
@@ -1544,7 +1544,7 @@
     .goAlphaWrap {
       position: absolute;
       right: 18px;
-      bottom: 26px;
+      bottom: 92px;
       z-index: 40;
       pointer-events: auto;
     }
@@ -1676,11 +1676,11 @@
         <div class="brandWrap">
           <div class="brandMark">ALPHA ALERTS</div>
           <div class="brandSep">•</div>
-          <div class="phaseTag">PHASE 3</div>
+          <div class="phaseTag">STAGE 3</div>
         </div>
         <div class="workflowNote">
           <div class="workflowTitle">SYSTEM WORKFLOW</div>
-          <p class="workflowText">PHASE 3 ROUTES TO EARLY, TREND, RUNNER.</p>
+          <p class="workflowText">STAGE 3 ROUTES TO EARLY, TREND, RUNNER.</p>
         </div>
       </div>
       <div class="mobileHeroTitle" aria-hidden="true">
@@ -1689,7 +1689,7 @@
       <canvas id="cv"></canvas>
 
       <!-- ==========================
-           Phase 3 CTA Portal Overlay
+           Stage 3 CTA Portal Overlay
            (Activates on click of GO ALPHA)
            ========================== -->
       <div class="portalLayer" id="portalLayer" aria-hidden="true">
@@ -2958,7 +2958,7 @@
             try {
               draw(now);
             } catch (err) {
-              console.error("phase-3 loop error", err);
+              console.error("stage-3 loop error", err);
               scheduleResize();
             }
             requestAnimationFrame(loop);
@@ -2980,7 +2980,7 @@
 
       <script>
         /* ============================================================
-           PHASE 3 CTA PORTAL (non-destructive upgrade)
+           STAGE 3 CTA PORTAL (non-destructive upgrade)
           - Click GO ALPHA
            - Cinematic zoom + warp streaks
            - Then navigate to pricing page
