--- a/hub-frontend/public/Part3-magnetic-router-forwarder.html
+++ b/hub-frontend/public/Part3-magnetic-router-forwarder.html
@@ -2107,6 +2107,10 @@
           const forwarder3d = document.getElementById("forwarder3d");
           const cubes = document.getElementById("cubes");
 
+          const IS_COARSE = window.matchMedia && window.matchMedia("(max-width: 820px), (pointer: coarse)").matches;
+          const PREFERS_REDUCED = window.matchMedia && window.matchMedia("(prefers-reduced-motion: reduce)").matches;
+          const DPR_CAP = PREFERS_REDUCED ? 1.1 : IS_COARSE ? 1.35 : 2;
+
           const TAU = Math.PI * 2;
           const clamp = (v, a, b) => Math.max(a, Math.min(b, v));
           const lerp = (a, b, t) => a + (b - a) * t;
@@ -2228,6 +2232,12 @@
             forwarder3d.classList.add("reduceFx");
           }
 
+          if (IS_COARSE || PREFERS_REDUCED) {
+            CFG.dprMax = Math.min(CFG.dprMax, DPR_CAP);
+            CFG.stars = Math.round(CFG.stars * (PREFERS_REDUCED ? 0.6 : 0.7));
+            CFG.packetGlow = Math.round(CFG.packetGlow * (PREFERS_REDUCED ? 0.7 : 0.85));
+          }
+
           let DPR = 1;
           let W = 1;
           let H = 1;
@@ -2303,6 +2313,20 @@
           if (window.visualViewport) {
             window.visualViewport.addEventListener("resize", scheduleResize, { passive: true });
           }
+
+          let rafId = 0;
+          let paused = document.hidden;
+
+          function setPaused(next) {
+            paused = next;
+            if (!paused && !rafId) {
+              rafId = requestAnimationFrame(loop);
+            }
+          }
+
+          document.addEventListener("visibilitychange", () => setPaused(document.hidden), { passive: true });
+          window.addEventListener("blur", () => setPaused(true), { passive: true });
+          window.addEventListener("focus", () => setPaused(false), { passive: true });
 
           /* ==========================
              Layout + routing geometry
@@ -2955,13 +2979,17 @@
           }
 
           function loop(now) {
+            if (paused) {
+              rafId = 0;
+              return;
+            }
             try {
               draw(now);
             } catch (err) {
               console.error("stage-3 loop error", err);
               scheduleResize();
             }
-            requestAnimationFrame(loop);
+            rafId = requestAnimationFrame(loop);
           }
 
           // Boot
@@ -2974,7 +3002,7 @@
           // Start one quick batch so you instantly see the logic on load
           router.nextSpawnAt = bootNow + 900;
 
-          requestAnimationFrame(loop);
+          rafId = requestAnimationFrame(loop);
         })();
       </script>
 
@@ -2992,6 +3020,10 @@
           const warpCv = document.getElementById("warpCv");
 
           if (!btn || !bubble || !portalLayer || !warpCv) return;
+
+          const PREFERS_REDUCED = window.matchMedia && window.matchMedia("(prefers-reduced-motion: reduce)").matches;
+          const IS_COARSE = window.matchMedia && window.matchMedia("(max-width: 820px), (pointer: coarse)").matches;
+          const DPR_CAP = PREFERS_REDUCED ? 1.1 : IS_COARSE ? 1.35 : 1.6;
 
           const TARGET_URL = "/pricing";
           const IS_SMALL_MOBILE = window.matchMedia && window.matchMedia("(max-width: 430px)").matches;
@@ -3063,7 +3095,7 @@
 
           function resizeWarp() {
             const rect = warpCv.getBoundingClientRect();
-            DPR = Math.max(1, Math.min(1.6, window.devicePixelRatio || 1));
+            DPR = Math.max(1, Math.min(DPR_CAP, window.devicePixelRatio || 1));
             W = Math.max(1, Math.floor(rect.width));
             H = Math.max(1, Math.floor(rect.height));
             warpCv.width = Math.floor(W * DPR);
@@ -3150,8 +3182,22 @@
           }
 
           let raf = 0;
+          let warpPaused = document.hidden;
+
+          function setWarpPaused(next) {
+            warpPaused = next;
+            if (!warpPaused && running && !raf) {
+              raf = requestAnimationFrame(warpLoop);
+            }
+          }
+
+          document.addEventListener("visibilitychange", () => setWarpPaused(document.hidden), { passive: true });
+
           function warpLoop(t) {
-            if (!running) return;
+            if (!running || warpPaused) {
+              raf = 0;
+              return;
+            }
 
             // keep enough particles alive
             while (streaks.length < MAX_STREAKS) spawnStreak();
