--- a/hub-frontend/public/Part1-source-node.html
+++ b/hub-frontend/public/Part1-source-node.html
@@ -390,6 +390,20 @@
     }
 
     @media (max-width: 820px) {
+      .stage {
+        padding: 0;
+      }
+
+      .frame {
+        width: 100vw;
+        max-width: 100vw;
+        height: 100vh;
+        height: 100svh;
+        height: 100dvh;
+        max-height: 100dvh;
+        border-radius: 0;
+      }
+
       .badgeStack {
         left: 12px;
         right: 12px;
@@ -403,15 +417,13 @@
 
     @media (max-width: 430px) {
       .stage {
-        padding: 8px;
+        padding: 0;
       }
 
       .frame {
-        width: 100vw;
-        height: 100vh;
-        height: 100svh;
-        height: 100dvh;
-        border-radius: 18px;
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
         display: flex;
         flex-direction: column;
       }
